--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 	<head><meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<title> My School Life </title>
 	</head>
-	<body style="background-color:blue:>
+	<body style="background color:blue:">
 		My school life was amazing and interesting to remeber
 	</body>
 
