--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 	</head>
 	<body bgcolor = "olive">
 		My school life was amazing and interesting to remeber
+		<input type="text">
+		<input type="date">
 	</body>
 
 </html>
