--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 		<title> My School Life </title>
 	</head>
 	<body bgcolor = "olive">
-		My school life was amazing and interesting to remeber
+		My school life was amazing and interesting to remeber <br/>
 		<input type="text">
 		<input type="date">
+		<input type="text" placeholder="username"><br/>
+		<textarea rows="10" cols="10"></textarea>
+		<img src="image/classwork.jpg" width="200px" hight="150px"><br/>
 	</body>
 
 </html>
