--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
 		My school life was amazing and interesting to remeber <br/>
 		<input type="text">
 		<input type="date">
-		<input type="text" placeholder="username"><br/>
-		<textarea rows="10" cols="10"></textarea>
-		<img src="image/classwork.jpg" width="200px" hight="150px"><br/>
+		<input type="text" placeholder="username">
+		<textarea rows="10" cols="10"></textarea><br/>
+		<img src=" Images/classwork.jpg" width="200px" height "100px"><br />
+
+		<img src="fakeimage.png" alt="Fake link image"><br/>
 	</body>
 
 </html>
