table and friut

--- a/index.html
+++ b/index.html
@@ -6,11 +6,34 @@
 		My school life was amazing and interesting to remeber <br/>
 		<input type="text">
 		<input type="date">
-		<input type="text" placeholder="username">
+		<input type="text">
 		<textarea rows="10" cols="10"></textarea><br/>
-		<img src=" Images/classwork.jpg" width="200px" height "100px"><br />
+		<img src=" Images/look.jpg" width="200px" height "100px"><br />
 
 		<img src="fakeimage.png" alt="Fake link image"><br/>
+		<table border = "1">
+			<tr>
+				<th>Name</th>
+				<th>Score</th>
+			</tr>
+			<tr>
+				<td>John Mark</td>
+				<td>89</td>
+			</tr>
+			<tr>
+				<td>Rasaq Abdullahi</td>
+				<td>76</td>
+			</tr>
+			<tr>
+				<td>mercy Ruth</td>
+				<td>82</td>
+			</tr>
+		</table><br/>
+		<ul>
+			<ol>1. Pineapple.</ol>
+			<ol>2. orange.</ol>
+			<ol>3. watermelon.</ol>
+		</ul><br/>
 	</body>
 
 </html>
