--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<input type="date">
 		<input type="text">
 		<textarea rows="10" cols="10"></textarea><br/>
-		<img src=" Images/look.jpg" width="200px" height "100px"><br />
+		<img src="Images/look.jpg" width="200px" height "100px"><br />
 
 		<img src="fakeimage.png" alt="Fake link image"><br/>
 		<table border = "1">
@@ -34,7 +34,7 @@
 			<ol>2. orange.</ol>
 			<ol>3. watermelon.</ol>
 		</ul><br/>
+		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u textcolor="red"> we showcase we know God but we dont uderstand his principle in any way</u></p>
 	</body>
-
 </html>
 
