--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<input type="date">
 		<input type="text">
 		<textarea rows="10" cols="10"></textarea><br/>
-		<img src="Images/look.jpg" width="200px" height "100px"><br />
+		<img src ="Images/look.jpg" width="200px" height "100px" border ="3"><br />
 
 		<img src="fakeimage.png" alt="Fake link image"><br/>
 		<table border = "1">
@@ -29,12 +29,13 @@
 				<td>82</td>
 			</tr>
 		</table><br/>
-		<ul>
+		<ol>
 			<ol>1. Pineapple.</ol>
 			<ol>2. orange.</ol>
 			<ol>3. watermelon.</ol>
-		</ul><br/>
-		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u textcolor="red"> we showcase we know God but we dont uderstand his principle in any way</u></p>
+		</ol><br/>
+		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u color = "red"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
+		<div> i want to understand this</div>
 	</body>
 </html>
 
