--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 		<input type="date">
 		<input type="text">
 		<textarea rows="10" cols="10"></textarea><br/>
-		<img src ="Images/look.jpg" width="200px" height "100px" border ="3"><br />
+		<img src ="Images/example.jpg" width="200px" height "100px" border ="1"><br />
 
 		<img src="fakeimage.png" alt="Fake link image"><br/>
-		<table border = "1">
+		<table border = "2">
 			<tr>
 				<th>Name</th>
 				<th>Score</th>
@@ -34,8 +34,8 @@
 			<ol>2. orange.</ol>
 			<ol>3. watermelon.</ol>
 		</ol><br/>
-		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u color = "red"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
-		<div> i want to understand this</div>
+		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u text = "red"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
+		<div bgcolor ="blue"> I want to understand this</div>
 	</body>
 </html>
 
