--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
 			<ol>2. orange.</ol>
 			<ol>3. watermelon.</ol>
 		</ol><br/>
-		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u text = "red"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
-		<div bgcolor ="blue"> I want to understand this</div>
+		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u style ="color:red:"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
+		<div style ="bgcolor:blue:"> I want to understand this</div>
 	</body>
 </html>
 
