--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<input type="date">
 		<input type="text">
 		<textarea rows="10" cols="10"></textarea><br/>
-		<img src="Image/example.jpg"><br />
+		<img src="images/look.jpg" width="200px" height="100px">
 
 		<img src="fakeimage.png" alt="Fake link image"><br/>
 		<table border = "2">
@@ -35,7 +35,7 @@
 			<ol>3. watermelon.</ol>
 		</ol><br/>
 		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u style ="color:red:"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
-		<div style ="bgcolor:blue:"> I want to understand this</div>
+		<div bgcolor=blue> I want to understand this</div>
 	</body>
 </html>
 
