--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 			<ol>3. watermelon.</ol>
 		</ol><br/>
 		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u style ="color:red:"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
-		<div bgcolor=blue> I want to understand this</div>
+		<div style="background-color:blue;">i want to understand this</div>
 	</body>
 </html>
 
