--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 		<input type="date">
 		<input type="text">
 		<textarea rows="10" cols="10"></textarea><br/>
-		<img src="images/look.jpg" width="200px" height="100px">
+		<img src="images/silent.jpg" width="200px" height="100px">
 
 		<img src="fakeimage.png" alt="Fake link image"><br/>
 		<table border = "2">
