--- a/index.html
+++ b/index.html
@@ -49,7 +49,11 @@
 				<input type="checkbox" checked="checked" name="remeber">Remeber me</label></div>
 		<div class="container" style="background-color:green">
 			<button type="button" class="canclebtn">Cancel</button>
-			<span class="psw">Forgot<a href="#">Password?</a></span></div>
+			<span class="psw">Forgot<a href="#">Password?</a></span></div><br/>
+		<div class="fb-share-button"
+data-href="https://https://m.facebook.com/home.php/my school.html"
+data-layout="button_count">
+		</div><br/>
 	</body>
 </html>
 
