--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 			<ol>2. orange.</ol>
 			<ol>3. watermelon.</ol>
 		</ol><br/>
-		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u style ="color:red:"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
+		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u style ="color:red"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
 		<div style="background-color:blue;">i want to understand this</div><br/>
 		<div class="container">
 			<label for="uname">
@@ -52,8 +52,7 @@
 			<span class="psw">Forgot<a href="#">Password?</a></span></div><br/>
 		<div class="fb-share-button"
 data-href="https://https://m.facebook.com/home.php/my school.html"
-data-layout="button_count">
-		</div><br/>
+data-layout="button_count">https://m.facebook.com/home.php</div><br/>
 	</body>
 </html>
 
