--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
 		<div class="container" style="background-color:green">
 			<button type="button" class="canclebtn">Cancel</button>
 			<span class="psw">Forgot<a href="#">Password?</a></span></div><br/>
-		<div class="fb-share-button"
-data-href="https://https://m.facebook.com/home.php/my school.html"
-data-layout="button_count">https://m.facebook.com/home.php</div><br/>
+		<a href="https://m.facebook.com/home.php">Click Here</a><br/>
 	</body>
 </html>
 
