--- a/index.html
+++ b/index.html
@@ -29,11 +29,12 @@
 				<td>82</td>
 			</tr>
 		</table><br/>
-		<ol>
+		<h2>List Of Friut</h2>
+		<ul>
 			<ol>1. Pineapple.</ol>
 			<ol>2. orange.</ol>
 			<ol>3. watermelon.</ol>
-		</ol><br/>
+		</ul><br/>
 		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u style ="color:red"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
 		<div style="background-color:blue;">i want to understand this</div><br/>
 		<div class="container">
@@ -44,13 +45,14 @@
 			<label for="psw">
 				<b>password</b></label>
 			<input type="password" placeholder="Enter Password" name="psw" required>
-			<button type="submit">Login</button>
+			<button type="submit" border="1">Login</button>
 			<label>
-				<input type="checkbox" checked="checked" name="remeber">Remeber me</label></div>
-		<div class="container" style="background-color:green">
+				<input type="checkbox" checked="checked" name="remeber">Remeber me</label></div><br/>
+		<div class="container" style="background-color:gray">
 			<button type="button" class="canclebtn">Cancel</button>
 			<span class="psw">Forgot<a href="#">Password?</a></span></div><br/>
-		<a href="https://m.facebook.com/login/?next&ref=dbl&fl&refid=8">Click Here</a><br/>
+		<h3>Facebook</h3>
+		<a href="https://m.facebook.com/login">Click Here</a><br/>
 	</body>
 </html>
 
