--- a/index.html
+++ b/index.html
@@ -41,18 +41,20 @@
 			<label for="uname">
 				<b>Username</b>
 			</label>
-			<input type="text" placeholder="Enter Username" name="uname" required>
+			<input type="text" placeholder="Enter Username" name="uname" required><br/>
 			<label for="psw">
 				<b>password</b></label>
-			<input type="password" placeholder="Enter Password" name="psw" required>
-			<button type="submit" border="1">Login</button>
+			<input type="password" placeholder="Enter Password" name="psw" required><br/>
+			<button type="submit" border="1" bgcolor="green">Login</button>
 			<label>
 				<input type="checkbox" checked="checked" name="remeber">Remeber me</label></div><br/>
 		<div class="container" style="background-color:gray">
-			<button type="button" class="canclebtn">Cancel</button>
+			<button type="button" class="canclebtn">Cancel</button><br/>
 			<span class="psw">Forgot<a href="#">Password?</a></span></div><br/>
 		<h3>Facebook</h3>
-		<a href="https://m.facebook.com/login">Click Here</a><br/>
+		<a href="https://m.facebook.com/login" border="1">Click Here</a><br/>
+		<h3>GitHub</h3>
+		<a href="https://github.com" border="1">Click Here</a><br/>
 	</body>
 </html>
 
