--- a/index.html
+++ b/index.html
@@ -6,12 +6,12 @@
 		My school life was amazing and interesting to remeber <br/>
 		<input type="text">
 		<input type="date">
-		<input type="text">
-		<textarea rows="10" cols="10"></textarea><br/>
+		<input type="text"><br/>
 		<img src="images/silent.jpg" width="200px" height="100px">
 
 		<img src="fakeimage.png" alt="Fake link image"><br/>
-		<table border = "2">
+		<h2>Student Analysis</h2>
+		<table border = "3">
 			<tr>
 				<th>Name</th>
 				<th>Score</th>
@@ -36,7 +36,7 @@
 			<ol>3. watermelon.</ol>
 		</ul><br/>
 		<p>The success of mankind does not depend on the level of our <b>EDUCATION</b>.where we make mistake is when we limit our <i>SUCCESS</i> in life to somethings outside God.<u style ="color:red"> we showcase we know God but we dont uderstand his principle in any way</u></p><br/>
-		<div style="background-color:blue;">i want to understand this</div><br/>
+		<div style="background-color:white;">Impact of God's hand on humanity. If not for God grace and mercy what will be our say today. God give me the grace ane show me mercy to come back to you my only source of internity. Let me save you for who you are, break me peice by peice till i completely become who and what you want of me o Lord.</div><br/>
 		<div class="container">
 			<label for="uname">
 				<b>Username</b>
@@ -45,7 +45,7 @@
 			<label for="psw">
 				<b>password</b></label>
 			<input type="password" placeholder="Enter Password" name="psw" required><br/>
-			<button type="submit" border="1" bgcolor="green">Login</button>
+						<button type="submit" border="2" style="background-color:green;">Login</button><br/>
 			<label>
 				<input type="checkbox" checked="checked" name="remeber">Remeber me</label></div><br/>
 		<div class="container" style="background-color:gray">
